NIFI-13590 Refactor components in standard-processors bundle using current API methods