@@ -16,19 +16,6 @@
  */
 package org.apache.nifi.processors.standard;
 
-import java.io.IOException;
-import java.io.OutputStream;
-import java.lang.reflect.InvocationTargetException;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Random;
-import java.util.Set;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicReference;
-
 import org.apache.nifi.annotation.documentation.CapabilityDescription;
 import org.apache.nifi.annotation.documentation.Tags;
 import org.apache.nifi.annotation.lifecycle.OnScheduled;
@@ -51,6 +38,16 @@ import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.processor.io.OutputStreamCallback;
 import org.apache.nifi.processor.util.StandardValidators;
 
+import java.io.IOException;
+import java.io.OutputStream;
+import java.lang.reflect.InvocationTargetException;
+import java.util.Collection;
+import java.util.List;
+import java.util.Random;
+import java.util.Set;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicReference;
+
 @Tags({"test", "debug", "processor", "utility", "flow", "FlowFile"})
 @CapabilityDescription("The DebugFlow processor aids testing and debugging the FlowFile framework by allowing various "
         + "responses to be explicitly triggered in response to the receipt of a FlowFile or a timer event without a "
@@ -69,7 +66,7 @@ public class DebugFlow extends AbstractProcessor {
             .description("FlowFiles that failed to process.")
             .build();
 
-    private final AtomicReference<List<PropertyDescriptor>> propertyDescriptors = new AtomicReference<>();
+    private final AtomicReference<List<PropertyDescriptor>> properties = new AtomicReference<>();
 
     static final PropertyDescriptor FF_SUCCESS_ITERATIONS = new PropertyDescriptor.Builder()
             .name("FlowFile Success Iterations")
@@ -264,10 +261,7 @@ public class DebugFlow extends AbstractProcessor {
     public Set<Relationship> getRelationships() {
         synchronized (relationships) {
             if (relationships.get() == null) {
-                HashSet<Relationship> relSet = new HashSet<>();
-                relSet.add(REL_SUCCESS);
-                relSet.add(REL_FAILURE);
-                relationships.compareAndSet(null, Collections.unmodifiableSet(relSet));
+                relationships.compareAndSet(null, Set.of(REL_SUCCESS, REL_FAILURE));
             }
             return relationships.get();
         }
@@ -275,35 +269,20 @@ public class DebugFlow extends AbstractProcessor {
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        synchronized (propertyDescriptors) {
-            if (propertyDescriptors.get() == null) {
-                ArrayList<PropertyDescriptor> propList = new ArrayList<>();
-                propList.add(FF_SUCCESS_ITERATIONS);
-                propList.add(FF_FAILURE_ITERATIONS);
-                propList.add(FF_ROLLBACK_ITERATIONS);
-                propList.add(FF_ROLLBACK_YIELD_ITERATIONS);
-                propList.add(FF_ROLLBACK_PENALTY_ITERATIONS);
-                propList.add(FF_EXCEPTION_ITERATIONS);
-                propList.add(FF_EXCEPTION_CLASS);
-                propList.add(NO_FF_SKIP_ITERATIONS);
-                propList.add(NO_FF_EXCEPTION_ITERATIONS);
-                propList.add(NO_FF_YIELD_ITERATIONS);
-                propList.add(NO_FF_EXCEPTION_CLASS);
-                propList.add(WRITE_ITERATIONS);
-                propList.add(CONTENT_SIZE);
-                propList.add(ON_SCHEDULED_SLEEP_TIME);
-                propList.add(ON_SCHEDULED_FAIL);
-                propList.add(ON_UNSCHEDULED_SLEEP_TIME);
-                propList.add(ON_UNSCHEDULED_FAIL);
-                propList.add(ON_STOPPED_SLEEP_TIME);
-                propList.add(ON_STOPPED_FAIL);
-                propList.add(ON_TRIGGER_SLEEP_TIME);
-                propList.add(CUSTOM_VALIDATE_SLEEP_TIME);
-                propList.add(IGNORE_INTERRUPTS);
+        synchronized (properties) {
+            if (properties.get() == null) {
+                List<PropertyDescriptor> properties = List.of(
+                        FF_SUCCESS_ITERATIONS, FF_FAILURE_ITERATIONS, FF_ROLLBACK_ITERATIONS, FF_ROLLBACK_YIELD_ITERATIONS,
+                        FF_ROLLBACK_PENALTY_ITERATIONS, FF_EXCEPTION_ITERATIONS, FF_EXCEPTION_CLASS, NO_FF_SKIP_ITERATIONS,
+                        NO_FF_EXCEPTION_ITERATIONS, NO_FF_YIELD_ITERATIONS, NO_FF_EXCEPTION_CLASS, WRITE_ITERATIONS,
+                        CONTENT_SIZE, ON_SCHEDULED_SLEEP_TIME, ON_SCHEDULED_FAIL, ON_UNSCHEDULED_SLEEP_TIME,
+                        ON_UNSCHEDULED_FAIL, ON_STOPPED_SLEEP_TIME, ON_STOPPED_FAIL, ON_TRIGGER_SLEEP_TIME,
+                        CUSTOM_VALIDATE_SLEEP_TIME, IGNORE_INTERRUPTS
+                );
 
-                propertyDescriptors.compareAndSet(null, Collections.unmodifiableList(propList));
+                this.properties.compareAndSet(null, properties);
             }
-            return propertyDescriptors.get();
+            return properties.get();
         }
     }
 
@@ -352,7 +331,7 @@ public class DebugFlow extends AbstractProcessor {
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
 
-            return Collections.singleton(new ValidationResult.Builder()
+            return Set.of(new ValidationResult.Builder()
                 .valid(false)
                 .subject("Validation")
                 .explanation("Processor Interrupted while performing validation").build());
