@@ -222,6 +222,11 @@ public class LookupRecord extends AbstractProcessor {
         .required(true)
         .build();
 
+    private static final List<PropertyDescriptor> PROPERTIES = List.of(
+            RECORD_READER, RECORD_WRITER, LOOKUP_SERVICE, ROOT_RECORD_PATH, ROUTING_STRATEGY, RESULT_CONTENTS,
+            REPLACEMENT_STRATEGY, RESULT_RECORD_PATH, CACHE_SIZE
+    );
+
     static final Relationship REL_MATCHED = new Relationship.Builder()
         .name("matched")
         .description("All records for which the lookup returns a value will be routed to this relationship")
@@ -239,11 +244,11 @@ public class LookupRecord extends AbstractProcessor {
         .description("If a FlowFile cannot be enriched, the unchanged FlowFile will be routed to this relationship")
         .build();
 
-    private static final Set<Relationship> MATCHED_COLLECTION = Collections.singleton(REL_MATCHED);
-    private static final Set<Relationship> UNMATCHED_COLLECTION = Collections.singleton(REL_UNMATCHED);
-    private static final Set<Relationship> SUCCESS_COLLECTION = Collections.singleton(REL_SUCCESS);
+    private static final Set<Relationship> MATCHED_COLLECTION = Set.of(REL_MATCHED);
+    private static final Set<Relationship> UNMATCHED_COLLECTION = Set.of(REL_UNMATCHED);
+    private static final Set<Relationship> SUCCESS_COLLECTION = Set.of(REL_SUCCESS);
 
-    private volatile Set<Relationship> relationships = new HashSet<>(Arrays.asList(REL_SUCCESS, REL_FAILURE));
+    private volatile Set<Relationship> relationships = Set.of(REL_SUCCESS, REL_FAILURE);
     private volatile boolean routeToMatchedUnmatched = false;
 
     @OnScheduled
@@ -258,17 +263,7 @@ public class LookupRecord extends AbstractProcessor {
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        final List<PropertyDescriptor> properties = new ArrayList<>();
-        properties.add(RECORD_READER);
-        properties.add(RECORD_WRITER);
-        properties.add(LOOKUP_SERVICE);
-        properties.add(ROOT_RECORD_PATH);
-        properties.add(ROUTING_STRATEGY);
-        properties.add(RESULT_CONTENTS);
-        properties.add(REPLACEMENT_STRATEGY);
-        properties.add(RESULT_RECORD_PATH);
-        properties.add(CACHE_SIZE);
-        return properties;
+        return PROPERTIES;
     }
 
     @Override
@@ -292,7 +287,7 @@ public class LookupRecord extends AbstractProcessor {
             .collect(Collectors.toSet());
 
         if (dynamicPropNames.isEmpty()) {
-            return Collections.singleton(new ValidationResult.Builder()
+            return Set.of(new ValidationResult.Builder()
                 .subject("User-Defined Properties")
                 .valid(false)
                 .explanation("At least one user-defined property must be specified.")
@@ -304,7 +299,7 @@ public class LookupRecord extends AbstractProcessor {
         if (validationContext.getProperty(REPLACEMENT_STRATEGY).getValue().equals(REPLACE_EXISTING_VALUES.getValue())) {
             // it must be a single key lookup service
             if (requiredKeys.size() != 1) {
-                return Collections.singleton(new ValidationResult.Builder()
+                return Set.of(new ValidationResult.Builder()
                         .subject(LOOKUP_SERVICE.getDisplayName())
                         .valid(false)
                         .explanation("When using \"" + REPLACE_EXISTING_VALUES.getDisplayName() + "\" as Record Update Strategy, "
@@ -340,18 +335,11 @@ public class LookupRecord extends AbstractProcessor {
     public void onPropertyModified(final PropertyDescriptor descriptor, final String oldValue, final String newValue) {
         if (ROUTING_STRATEGY.equals(descriptor)) {
             if (ROUTE_TO_MATCHED_UNMATCHED.getValue().equalsIgnoreCase(newValue)) {
-                final Set<Relationship> matchedUnmatchedRels = new HashSet<>();
-                matchedUnmatchedRels.add(REL_MATCHED);
-                matchedUnmatchedRels.add(REL_UNMATCHED);
-                matchedUnmatchedRels.add(REL_FAILURE);
-                this.relationships = matchedUnmatchedRels;
+                this.relationships = Set.of(REL_MATCHED, REL_UNMATCHED, REL_FAILURE);
 
                 this.routeToMatchedUnmatched = true;
             } else {
-                final Set<Relationship> successRels = new HashSet<>();
-                successRels.add(REL_SUCCESS);
-                successRels.add(REL_FAILURE);
-                this.relationships = successRels;
+                this.relationships = Set.of(REL_SUCCESS, REL_FAILURE);
 
                 this.routeToMatchedUnmatched = false;
             }
@@ -674,9 +662,7 @@ public class LookupRecord extends AbstractProcessor {
                 final RecordPathResult resultPathResult = resultPath.evaluate(record);
 
                 final String resultContentsValue = context.getProperty(RESULT_CONTENTS).getValue();
-                if (RESULT_RECORD_FIELDS.getValue().equals(resultContentsValue) && lookupValue instanceof Record) {
-                    final Record lookupRecord = (Record) lookupValue;
-
+                if (RESULT_RECORD_FIELDS.getValue().equals(resultContentsValue) && lookupValue instanceof Record lookupRecord) {
                     // User wants to add all fields of the resultant Record to the specified Record Path.
                     // If the destination Record Path returns to us a Record, then we will add all field values of
                     // the Lookup Record to the destination Record. However, if the destination Record Path returns
