@@ -23,7 +23,6 @@ import java.sql.JDBCType;
 import java.sql.Types;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -91,8 +90,7 @@ public class MySQLDatabaseAdapter extends GenericDatabaseAdapter {
             throw new IllegalArgumentException("Key column names cannot be null or empty");
         }
 
-        String columns = columnNames.stream()
-                .collect(Collectors.joining(", "));
+        String columns = String.join(", ", columnNames);
 
         String parameterizedInsertValues = columnNames.stream()
                 .map(__ -> "?")
@@ -126,8 +124,7 @@ public class MySQLDatabaseAdapter extends GenericDatabaseAdapter {
             throw new IllegalArgumentException("Key column names cannot be null or empty");
         }
 
-        String columns = columnNames.stream()
-                .collect(Collectors.joining(", "));
+        String columns = String.join(", ", columnNames);
 
         String parameterizedInsertValues = columnNames.stream()
                 .map(__ -> "?")
@@ -171,7 +168,7 @@ public class MySQLDatabaseAdapter extends GenericDatabaseAdapter {
         }
 
         StringBuilder alterTableStatement = new StringBuilder();
-        return Collections.singletonList(alterTableStatement.append("ALTER TABLE ")
+        return List.of(alterTableStatement.append("ALTER TABLE ")
                 .append(quoteTableName ? getTableQuoteString() : "")
                 .append(tableName)
                 .append(quoteTableName ? getTableQuoteString() : "")
